章のインクルードを有効化し、全体の構成を整備

--- a/thesis.tex
+++ b/thesis.tex
@@ -49,10 +49,10 @@
 \mainmatter{}
 %
 \include{introduction/main}
-%\include{second/main}
-%\include{third/main}
-%\include{production/main}
-%\include{conclusion/main}
+\include{second/main}
+\include{third/main}
+\include{production/main}
+\include{conclusion/main}
 %ここにディレクトリのパスを追加していく
 %
 %% Back Matter
