画像のパスを修正し、デザインフォルダ内のリンク長とアームサイズの画像を更新

--- a/third/design.tex
+++ b/third/design.tex
@@ -6,14 +6,14 @@
 
 \begin{figure}[htbp]
   \centering
-  \includegraphics[width=10cm]{images/link_length.png}
+  \includegraphics[width=10cm]{images/design/link_length.png}
   \caption{Arm reach and link length}
   \label{fig:link_length}
 \end{figure}
 
 \begin{figure}[htbp]
   \centering
-  \includegraphics[width=10cm]{images/hikaku.png}
+  \includegraphics[width=10cm]{images/design/hikaku.png}
   \caption{Arm size}
   \label{fig:arm_size}
 \end{figure}
