ロボットアームのメカニズム設計に関する説明を更新し、QDDモータの選定理由を明確化

--- a/third/main.tex
+++ b/third/main.tex
@@ -1,14 +1,9 @@
 \chapter{設計}
 \label{chap:third}
 %
-本章では，使用するQDDモータの説明とロボットアームの基本的な性能や，要求仕様を満たすための設計について述べる．設計には，Autodesk Inventor 2023を使用した．ロボットアームは，6自由度のアームと1軸駆動の平行グリッパで構成されており，前章で述べた要求仕様を満たすように設計されている．アームの主要構成部品は，QDDモータ6基，アルミ板金部品7点，アルミフレーム2本，平行グリッパである．
-\begin{figure}[h]
-  \centering
-  \includegraphics[width=10cm]{images/arm_design.png}
-  \caption{Robot arm configuration}
-  \label{fig:arm_design}
-\end{figure}
-\newpage
+本章ではロボットアームのメカニズムの設計について述べる．
+まず，選定したQDDモータについて説明し，ロボットアームの設計について述べる．
+
 \input{third/OPL}
 \input{third/QDDmotor}
 \input{third/design}
