目的セクションのQDDモータに関する表現を簡潔にし、オフィスロボットの作業要件に関する説明を明確化

--- a/introduction/purpose.tex
+++ b/introduction/purpose.tex
@@ -1,8 +1,8 @@
 %!TEX root = ../thesis.tex
 
 \section{目的}
-本研究は，オープンプラットフォームオフィスロボット開発の第一段階として，応用事例の少ない市販のQDDモータを用いたロボットアームのメカニズムを開発し，その設計データを公開することを目的とする．
+本研究は，オープンプラットフォームオフィスロボット開発の第一段階として，QDDモータを用いたロボットアームのメカニズムを開発し，その設計データを公開することを目的とする．
 \section{本論文の構成}
-第１章は，研究背景や目的について述べ，本研究と関連する先行研究や文献について調査して，研究の位置づけを明らかにした．第2章では，オフィスロボットの作業要件とロボットアームの仕様について述べる．第3章では，QDDモータを用いたロボットアームの設計について述べる．第4章では製作について述べる．最後に，第5章で結論と今後の展望を述べる．
+第１章は，研究背景や目的について述べ，本研究と関連する先行研究や文献について調査して，研究の位置づけを明らかにした．第2章では，オフィスロボットが対象とする作業とロボットアームの仕様について述べる．第3章では，QDDモータを用いたロボットアームの設計について述べる．第4章では製作について述べる．最後に，第5章で結論と今後の展望を述べる．
 
 \newpage
