オフィスロボットのロボットアームに関する要求仕様の表現を改善し、従来のオフィスロボットに基づく調査結果を反映させた。具体的には、アームリーチ、可搬重量、自由度、エンドエフェクタの形状に関する記述を明確化した。

--- a/second/spec.tex
+++ b/second/spec.tex
@@ -1,6 +1,6 @@
 %!TEX root = ../thesis.tex
 \section{オフィスロボットのロボットアームとして要求される項目}
-前節で設定した作業（机の片づけ）から導かれる要求事項と，既存オフィスロボットのロボットアーム調査の結果を踏まえて，以下の項目を要求仕様として設定した．なお，QDD モータの使用とオープンプラットフォーム性は，本研究の前提であるため，ここではその他の項目を示す．以下の項目を仕様として，ロボットアームのメカニズム設計を行う．
+前節で設定した作業（机の片づけ）から導かれる要求事項と，従来のオフィスロボットのロボットアーム調査の結果を踏まえて，以下の項目を要求仕様として設定した．なお，QDD モータの使用とオープンプラットフォーム性は，本研究の前提であるため，ここではその他の項目を示す．以下の項目を仕様として，ロボットアームのメカニズム設計を行う．
 \begin{itemize}
   \item 0.65m - 0.70mのアームリーチ
   \item 500g以上の可搬重量
@@ -10,7 +10,7 @@
 以下では，これらの項目の詳細について述べる．
 
 \subsection{アームリーチ}
-前節で設定した作業より，ロボットアームから0.5m以内の範囲にある対象物を扱えることが要求される．また，既存のオフィスロボット 10 台のアームリーチを調査した結果（図\ref{fig:reach}参照），最小は0.51m，最大は0.90mで，平均値および中央値はいずれも0.71mであった．そこで，本研究ではアームリーチを0.65mから0.70mの範囲に設定した．
+前節で設定した作業より，ロボットアームから0.5m以内の範囲にある対象物を扱えることが求められる．また，従来のオフィスロボット10台のアームリーチを調査した結果（図\ref{fig:reach}参照），最小値は0.51m，最大値は0.90m，平均値および中央値はいずれも0.71mであった．これらのデータおよび設計上の制約を踏まえ，本研究ではリーチを0.65m-0.70mに設定した．この範囲は，従来ロボットの平均値に近く，設計の現実性を考慮しつつ，必要な作業範囲を十分に確保できる．
 \begin{figure}[h]
   \centering
   \includegraphics[width=10cm]{images/2syou/reach.png}
@@ -19,7 +19,7 @@
 \end{figure}
 
 \subsection{可搬重量}
-机の片づけ作業では，最大500gの物体の把持が求められる．また，既存ロボットアーム調査では，可搬重量の最小は0.35kgであった（図\ref{fig:payload}参照）．よって，現時点のオフィス作業においては0.5kg以上の可搬重量を確保できれば十分であると考えられるため，本研究では0.5kg以上を可搬重量の要件とした．
+前節で設定した作業より，ロボットアームは最大500gの物体を持ち上げることが求められる．また，従来ロボットアーム調査では，可搬重量の最小は0.35kgであった（図\ref{fig:payload}参照）．よって，現時点のオフィス作業においては0.5kg以上の可搬重量を確保できれば十分であると考えられるため，本研究では0.5kg以上を可搬重量の要件とした．
 \begin{figure}
   \centering
   \includegraphics[width=10cm]{images/2syou/payload.png}
@@ -29,7 +29,7 @@
 \clearpage
 
 \subsection{自由度}
-既存のオフィスロボットのアームの自由度を調査したところ，6自由度と7自由度のロボットが大半であった（\ref{fig:armDof}参照）．6自由度の軸配置は，肩2軸（ピッチ，ロール），肘1軸（ロール），手首3軸（ロール，ピッチ，ヨー）で，7自由度ロボットは肩にロール軸が追加されている．7自由度アームは6自由度アームに比べて姿勢の自由度が増す一方で，アーム重量やコストが増加する．本研究ではコスト削減と軽量化を優先し，6自由度を採用した．
+従来のオフィスロボットのアームの自由度を調査したところ，6自由度と7自由度のロボットが大半であった（\ref{fig:armDof}参照）．6自由度の軸配置は，肩2軸（ピッチ，ロール），肘1軸（ロール），手首3軸（ロール，ピッチ，ヨー）で，7自由度ロボットは肩にロール軸が追加されている．7自由度アームは6自由度アームに比べて姿勢の自由度が増す一方で，アーム重量やコストが増加する．本研究ではコスト削減と軽量化を優先し，6自由度を採用した．
 \begin{figure}[h]
   \centering
   \includegraphics[width=10cm]{images/2syou/armDof.pdf}
@@ -39,11 +39,11 @@
 \clearpage
 
 \subsection{エンドエフェクタの形状}
-既存のオフィスロボットで多く採用されているエンドエフェクタは，TIAGoのような平行グリッパ（図\ref{fig:tiago_hand}参照）である．TIAGoを開発しているPAL Robotics社が公開している動画\cite{TIAGo-movie:online}では，布，ジュース缶，スプレー缶，ジュースパック，板状物など多様な形状の物体を把持している様子が確認できる．本研究においても多様な形状の物体把持が求められるため，平行グリッパを採用した．
+従来のオフィスロボットで多く採用されているエンドエフェクタは，TIAGoのような平行グリッパ（図\ref{fig:tiago_hand}参照）である．TIAGoを開発しているPAL Robotics社が公開している動画\cite{TIAGo-movie:online}では，布，ジュース缶，スプレー缶，ジュースパック，板状物など多様な形状の物体を把持している様子が確認できる．本研究においても多様な形状の物体把持が求められるため，平行グリッパを採用した．
 \begin{figure}[h]
   \centering
   \includegraphics[width=8cm]{images/2syou/tiago_hand.png}
-  \caption{End effectior of TIAGo}
+  \caption[End effectior of TIAGo]{End effectior of TIAGo (source: \cite{TIAGo:online})}
   \label{fig:tiago_hand}
 \end{figure}
 \clearpage
