--- a/third/QDDmotor.tex
+++ b/third/QDDmotor.tex
@@ -1,32 +1,30 @@
 %!TEX root = ../thesis.tex
-\section{QDDモータの選定と特徴}
-採用したQDDモータは2種類あり，肩関節と肘関節にトルクの大きいQDDモータ(Steadywin GIM8108-8)を使用し，手首およびエンドエフェクタにはトルクの小さいモータ(Steadywin GIM3505-8)を使用する．QDDモータを採用することで，柔軟な関節動作を実現し，衝突時の安全性を向上させることが可能となる．以下では，肩関節と肘関節に使用するトルクの大きいモータを例に，一般的なロボットアーム用モータと比較してその特性を論じる．
-\subsection{QDDモータと一般的なモータの比較表}
-表\ref{tab:QDDComparison}に，本研究で使用するQDDモータと一般的なロボットアーム用モータ(Dynamixel MX-106T)の比較を示す．
-\begin{table}[h]
+\section{QDDモータの選定}
+飯塚ら\cite{飯塚浩太2021}の研究では，減速比10:1のQDDモータが使用されている．また，Zhaoら\cite{10106520}の研究においては，減速比9:1のQDDモータが採用されていた．これらの先行研究は，ロボットアームの柔軟性や衝突時の衝撃力軽減を実現するためには，この程度の減速比を持つモータを採用することが有効であることを示唆している．
+
+さらに，本研究ではオープンプラットフォームの観点を重視し，他のロボットアームに使用されているモータと同程度，またはそれ以下の価格であることを選定基準とした．調査対象としたオフィスロボットのうち，ロボットアームに使用しているアクチュエータの価格は，約3万円から約8万円であったため，価格上限を8万円に設定した．
+
+以上を踏まえ，本研究では，持つSteadywinのGIM8108-8とGIM3505-8を採用した．減速比は8:1であり，先行研究で使用されていたモータと同程度の減速比を持つ．また，価格は約19,000円と約18,000円であり，価格上限である8万円を下回っている．
+\subsection{選定したモータの性能}
+表\ref{tab:QDDComparison}に，選定したQDDモータとReachy\cite{Reachy:online}のアームに使用されているモータ(Dynamixel MX-106T)の比較を示す．選定したSteadywinのGIM8108-8とGIM3505-8は，減速比が8:1で，先行研究で使用していた減速比と近しい物になっている．適切に制御することで衝突時の衝撃を軽減することが可能である．また，許容ラジアル荷重とアキシアル荷重も高いため，追加の補強部品を必要とせずにロボットアームの構造を簡略化することが可能である．
+\begin{table}[]
   \centering
-  \begin{tabular}{lcc}
-    \hline
-    \multicolumn{1}{c}{\textbf{}} & \begin{tabular}[c]{@{}c@{}}SteadyWin\\ GIM8108-8\end{tabular} & \begin{tabular}[c]{@{}c@{}}Dynamixel\\ MX-106T\end{tabular} \\ \hline
-    減速比                           & 8:1                                                           & 225:1                                                      \\ 
-    最大トルク (Nm)                     & 22                                                            & 10                                                         \\ 
-    モータ重量 (g)                      & 396                                                           & 153                                                        \\ 
-    無負荷回転数 (rpm)                   & 320                                                           & 55                                                         \\ 
-    許容ラジアル荷重 (N)                   & 900                                                           & 40                                                         \\ 
-    許容アキシアル荷重 (N)                  & 225                                                           & 20                                                         \\ \hline
-  \end{tabular}
-  \caption{QDDモータと一般的なロボットアーム用モータの比較}
+  \caption{QDD motor performance comparison}
   \label{tab:QDDComparison}
+  \begin{tabular}{lccc}
+  \hline
+               & \begin{tabular}[c]{@{}c@{}}SteadyWin\\ GIM8108-8\end{tabular} & \begin{tabular}[c]{@{}c@{}}SteadyWin\\ GIM3505-8\end{tabular} & \begin{tabular}[c]{@{}c@{}}Dynamixel\\ MX-106T\end{tabular} \\ \hline
+  減速比          & 8 : 1                                                         & 8 : 1                                                         & 225 : 1                                                     \\
+  定格トルク(Nm)    & 7.5                                                           & 0.65                                                          & -                                                           \\
+  最大トルク(Nm)    & 22                                                            & 1.27                                                          & 10                                                          \\
+  重量(g)        & 396                                                           & 97                                                            & 153                                                         \\
+  無負荷回転数(rpm)  & 320                                                           & 384                                                           & 55                                                          \\
+  許容ラジアル荷重(N)  & 900                                                           & 300                                                           & 40                                                          \\
+  許容アキシアル荷重(N) & 225                                                           & 75                                                            & 20                                                          \\
+  価格(円)        & 約19,000                                                       & 約18,000                                                       & 約80,000                                                     \\ \hline
+  \end{tabular}
 \end{table}
 
-\subsection{減速比}
-採用した QDD モータの減速比は約 8:1 であり，これは一般的なロボットアームに使用されるモータの減速比（225:1）に比べて著しく低い．低減速比により，バックドライバビリティが高まり，柔軟な関節動作を実現することが可能となる．これにより，外力に対して柔軟に対応できるため，衝突時の衝撃を最小限に抑えられる．また，柔軟性の向上により，安全性が求められるオフィス環境での運用に適している．
-\subsection{高トルクと重量}
-採用した QDD モータは，最大トルクが 22Nm であり，一般的なロボットアーム用モータの約 2.2 倍のトルクを提供できる．これにより，肩関節や肘関節において高い負荷がかかる作業を可能にする．しかし，QDD モータは重量が 396g と，一般的なモータ（153g）の約 2.6 倍であり，設計では軽量化が求められる．
-\subsection{無負荷回転数}
-QDD モータの無負荷回転数は 320rpm であり，これは一般的なロボットアーム用モータの 55rpm に比べて約 6 倍高速である．高速な回転数は，動作の迅速化や応答性の向上に寄与する．特に，短い時間での作業遂行が求められる環境での利便性を高める．
-\subsection{許容荷重}
-QDD モータは，ラジアル荷重とアキシアル荷重の許容値が非常に高い．ラジアル荷重の許容値は 900N，アキシアル荷重は 225N であり，これは一般的なモータ（ラジアル荷重 40N，アキシアル荷重 20N）に比べて大幅に優れている．これにより，モータの出力軸に直接部品を接続する片持ち梁設計が可能となる．片持ち梁設計は，追加の支持構造が不要となるため，設計の簡素化や部品点数の削減が期待できる．
 \subsection{QDDモータの欠点}
-QDDモータは高トルク・高スピードでの動作が可能であるという利点を持つ一方で、この特性は制御が不十分な場合にリスクとなる．特に、通電時に動作が暴走した場合、一般的なモータと比較して周囲の人や機器への影響が大きい．そのため、QDDモータを安全に運用するためには、動作制御における適切な安全対策が不可欠である．また．QDDモータは重量が大きいため，設計時には軽量化を考慮する必要がある．軽量化を図ることで，暴走時のリスク軽減にも繋がる．
+QDDモータは高トルク・高スピードでの動作が可能であるという利点を持つ一方で、この特性は制御が不十分な場合にリスクとなる．特に、通電時に動作が暴走した場合、一般的なモータと比較して周囲の人や機器への被害が大きい．そのため、QDDモータを安全に運用するためには、適切な制御と安全対策が必要である．
 \newpage
