subcaptionパッケージを追加し、図のキャプション機能を強化

--- a/thesis.tex
+++ b/thesis.tex
@@ -4,7 +4,7 @@
 \usepackage[dvipdfmx]{color}
 \usepackage[dvipdfmx, bookmarks=true, setpagesize=false, hidelinks]{hyperref}
 \usepackage{pxjahyper}
-
+\usepackage{subcaption}
 \usepackage{thesis}
 \usepackage{here}
 \usepackage{url}
