--- a/second/spec.tex
+++ b/second/spec.tex
@@ -10,7 +10,7 @@
 以下では，これらの項目の詳細について述べる．
 
 \subsection{アームリーチ}
-前節で設定した作業より，ロボットアームから0.5m以内の範囲にある対象物を扱えることが求められる．また，従来のオフィスロボット10台のアームリーチを調査した結果（図\ref{fig:reach}参照），最小値は0.51m，最大値は0.90m，平均値および中央値はいずれも0.71mであった．これらのデータおよび設計上の制約を踏まえ，本研究ではリーチを0.65m-0.70mに設定した．この範囲は，従来ロボットの平均値に近く，設計の現実性を考慮しつつ，必要な作業範囲を十分に確保できる．
+前節で設定した作業より，ロボットアームから0.5m以内の範囲にある対象物を扱えることが求められる．また，従来のオフィスロボット10台のアームリーチを調査した結果（図\ref{fig:reach}参照），最小値は0.51m，最大値は0.90m，平均値および中央値はいずれも0.71mであった．これらのデータを踏まえ，本研究ではリーチを0.70m以下に設定した．
 \begin{figure}[h]
   \centering
   \includegraphics[width=10cm]{images/2syou/reach.png}
@@ -19,7 +19,7 @@
 \end{figure}
 
 \subsection{可搬重量}
-前節で設定した作業より，ロボットアームは最大500gの物体を持ち上げることが求められる．また，従来ロボットアーム調査では，可搬重量の最小は0.35kgであった（図\ref{fig:payload}参照）．よって，現時点のオフィス作業においては0.5kg以上の可搬重量を確保できれば十分であると考えられるため，本研究では0.5kg以上を可搬重量の要件とした．
+前節で設定した作業より，ロボットアームは最大500gの物体を持ち上げることが求められる．また，従来ロボットアームの調査では，可搬重量の最小は0.35kgであった（図\ref{fig:payload}参照）．よって，現時点のオフィス作業においては0.5kg以上の可搬重量を確保できれば十分であると考えられるため，本研究では0.5kg以上を可搬重量の要件とした．
 \begin{figure}
   \centering
   \includegraphics[width=10cm]{images/2syou/payload.png}
