設計データのGitHub公開リンクを追加し、ロボットアームの設計に関する情報を強化

--- a/third/design.tex
+++ b/third/design.tex
@@ -1,7 +1,9 @@
 %!TEX root = ../thesis.tex
 
 \section{ロボットアームの設計}
-要求仕様に基づき，6軸のロボットアームを設計した．設計にはAutodesk社のInventor 2023を使用した．本節では，設計したロボットアームの構造と基本的な性能について述べる．
+要求仕様に基づき，6軸のロボットアームを設計した．設計にはAutodesk社のInventor 2023を使用した．設計データはGitHub上で公開している(https://github.com/open-rdc/OfficeRobot)．
+
+本節では，設計したロボットアームの構造と基本的な性能について述べる．
 \subsection{構造}
 図\ref{fig:arm_design}に設計したロボットアームを示す．肩ピッチ，ヨー軸と，肘ピッチ軸に，Steadywin GIM8108-8を用いた．手首の3軸とハンドの1軸にSteadywin GIM3505-8を用いた．リンクにはアルミフレームを用いており，モータとリンクを繋ぐ部品はアルミニウム合金(A5052)で設計した．
 \begin{figure}
