QDDモータの選定に関する説明を修正し、ロボットアームと人の衝突時の衝撃力軽減について明確化

--- a/third/QDDmotor.tex
+++ b/third/QDDmotor.tex
@@ -1,6 +1,6 @@
 %!TEX root = ../thesis.tex
 \section{QDDモータの選定}
-飯塚ら\cite{飯塚浩太2021}の研究では，減速比10:1のQDDモータが使用されている．また，Zhaoら\cite{10106520}の研究においては，減速比9:1のQDDモータが採用されていた．これらの先行研究は，ロボットアームの柔軟性や衝突時の衝撃力軽減を実現するためには，この程度の減速比を持つモータを採用することが有効であることを示唆している．
+飯塚ら\cite{飯塚浩太2021}の研究では，減速比10:1のQDDモータが使用されている．また，Zhaoら\cite{10106520}の研究においては，減速比9:1のQDDモータが採用されていた．これらの先行研究は，ロボットアームと人の衝突時の衝撃力軽減を実現するためには，この程度の減速比を持つモータを採用することが有効であることを示唆している．
 
 さらに，本研究ではオープンプラットフォームの観点を重視し，他のロボットアームに使用されているモータと同程度，またはそれ以下の価格であることを選定基準とした．調査対象としたオフィスロボットのうち，ロボットアームに使用しているアクチュエータの価格は，約3万円から約8万円であったため，価格上限を8万円に設定した．
 
