構造解析の説明を修正し、安全率の判断基準を明確化。最終設計の形状変更についても記述を更新。

--- a/third/structural_analysis.tex
+++ b/third/structural_analysis.tex
@@ -1,6 +1,6 @@
 %!TEX root = ../thesis.tex
 \section{構造解析}
-モータとリンクを繋ぐ板金部品の強度を，Inventorを用いた構造解析で確認した．本節では，特に強度が必要な肩部の部品について解析結果を述べる．肩部は，ヨー軸モータとピッチ軸モータを繋ぐ部品1，およびピッチ軸モータとリンクを繋ぐ部品2から構成される（図\ref{fig:shoulder}）．
+モータとリンクを繋ぐ板金部品の強度を，Inventorを用いた構造解析で確認した．構造解析を行い，安全率が1以上であれば強度が確保されているものと判断した．本節では，特に強度が必要な肩部の部品について解析結果を述べる．肩部は，ヨー軸モータとピッチ軸モータを繋ぐ部品1，およびピッチ軸モータとリンクを繋ぐ部品2から構成される（図\ref{fig:shoulder}）．
 
 \begin{figure}[h]
   \centering
@@ -30,8 +30,8 @@
   \end{tabular}
   \label{tab:part1_spec}
 \end{table}
-
-厚みを5㎜に変更した場合，安全率が1.01に向上するが，質量が71.1gに増加する（図\ref{fig:T5}，表\ref{tab:part1_spec_T5}参照）．一方，厚みを3㎜のまま形状を最適化した結果，安全率は1.1に達し，質量を61.8gに抑えることができた（図\ref{fig:T3_80}，表\ref{tab:part1_spec_T3_80}参照）．最適化した形状を最終設計とする．
+\clearpage
+厚みを5㎜に変更した場合，安全率が1.01に向上するが，質量が71.1gに増加する（図\ref{fig:T5}，表\ref{tab:part1_spec_T5}参照）．一方，厚みを3㎜のまま形状を変更した結果，安全率は1.1に達し，質量を61.8gに抑えることができた（図\ref{fig:T3_80}，表\ref{tab:part1_spec_T3_80}参照）．図\ref{fig:T3_80}の形状を最終設計とする．
 
 \begin{figure}[h]
   \centering
@@ -51,6 +51,7 @@
   \end{tabular}
   \label{tab:part1_spec_T5}
 \end{table}
+\clearpage
 
 \begin{figure}[h]
   \centering
