生産セクションの名称を「construction」に変更

--- a/thesis.tex
+++ b/thesis.tex
@@ -51,7 +51,7 @@
 \include{introduction/main}
 \include{second/main}
 \include{third/main}
-\include{production/main}
+\include{construction/main}
 \include{conclusion/main}
 %ここにディレクトリのパスを追加していく
 %
