軽量ロボットアームに関する記述を更新し、シミュレーション実験と実ロボットを使用した実験による優れたコンプライアンスを強調

--- a/introduction/qddmotor.tex
+++ b/introduction/qddmotor.tex
@@ -7,7 +7,7 @@
 
 また，Gealyら\cite{gealy2019}が開発したBlue(図\ref{fig:blue}参照)では，アームの関節にQDDモータを採用することで，高いバックドライバビリティと応答性を活かした作業を可能にしている．特に，動作中に人間が接触した場合でも，関節が柔軟に動作する特性や，人間が遠隔操作を行い，コーヒーメーカを操作や，机拭き作業などを行えることを示している\cite{Blue:online}．
 
-さらに，Zhaoら\cite{10106520}は，モバイルプラットフォームへの搭載を視野に入れた軽量ロボットアームを開発している(図\ref{fig:qddarm}参照)．同アームは6自由度や7自由度のロボットアームが多い中，5自由度で構成されており，部品の形状，素材によって軽量化を図っている．同アームはピックアンドプレースタスクを想定した実験により，高い柔軟性と安全性を実証している．
+さらに，Zhaoら\cite{10106520}は，モバイルプラットフォームへの搭載を視野に入れた軽量ロボットアームを開発している(図\ref{fig:qddarm}参照)．同アームは6自由度や7自由度のロボットアームが多い中，5自由度で構成されており，部品の形状，素材によって軽量化を図っている．シミュレーション実験と実ロボットを使用した実験により，優れたコンプライアンスを備えていることを示している．
 
 これらの研究から，QDDモータを適切に制御することで，衝突時の衝撃を軽減することが確認されている．一方で，QDDモータを使用したオープンソースロボットアームは確認されていない．また，QDDモータをロボットアームに活用した事例は少なく，QDDモータの技術的なノウハウや応用可能性については，まだ十分に探求されていないのが現状である．
 
