目的セクションを更新し、QDDモータの可能性探求とオープンプラットフォームの提供による技術交流の促進について詳述

--- a/introduction/purpose.tex
+++ b/introduction/purpose.tex
@@ -1,7 +1,7 @@
 %!TEX root = ../thesis.tex
 
 \section{目的}
-本研究は，オープンプラットフォームオフィスロボット開発の第一段階として，QDDモータを用いたロボットアームのメカニズムを開発し，その設計データを公開することを目的とする．
+本研究は，オープンプラットフォームオフィスロボット開発の第一段階として，QDDモータを用いたロボットアームのメカニズムを開発し，その設計データを公開することを目的とする．設計データを公開することで，ロボットアームに置けるQDDモータのかつ追う可能性を探求する研究基盤を提供する．また，オフィスロボット開発者に向けて，オープンプラットフォームを提供し，技術交流の活性化促進に貢献する．
 \section{本論文の構成}
 第１章は，研究背景や目的について述べ，本研究と関連する先行研究や文献について調査して，研究の位置づけを明らかにした．第2章では，オフィスロボットが対象とする作業とロボットアームの仕様について述べる．第3章では，QDDモータを用いたロボットアームの設計について述べる．第4章では製作について述べる．最後に，第5章で結論と今後の展望を述べる．
 
