QDDモータを使用したオープンソースロボットアームの調査結果を更新し、技術的なノウハウや応用可能性の探求状況を詳述

--- a/introduction/qddmotor.tex
+++ b/introduction/qddmotor.tex
@@ -9,7 +9,7 @@
 
 さらに，Zhaoら\cite{10106520}は，モバイルプラットフォームへの搭載を視野に入れた軽量ロボットアームを開発している(図\ref{fig:qddarm}参照)．同アームは6自由度や7自由度のロボットアームが多い中，5自由度で構成されており，部品の形状，素材によって軽量化を図っている．シミュレーション実験と実ロボットを使用した実験により，優れたコンプライアンスを備えていることを示している．
 
-これらの研究から，QDDモータを適切に制御することで，衝突時の衝撃を軽減することが確認されている．一方で，QDDモータを使用したオープンソースロボットアームは確認されていない．また，QDDモータをロボットアームに活用した事例は少なく，QDDモータの技術的なノウハウや応用可能性については，まだ十分に探求されていないのが現状である．
+これらの研究から，QDDモータを適切に制御することで，衝突時の衝撃を軽減することが確認されている．一方で，QDDモータを使用したオープンソースのロボットアームは，調査した中では確認されていない．また，QDDモータをロボットアームに活用した事例は少なく，QDDモータの技術的なノウハウや応用可能性については，まだ十分に探求されていないのが現状である．
 
 \begin{figure}[h]
   \centering
