設計指針において、タスクと仕様の入力をコメントアウトし、新たにアーム調査と新タスクの入力を追加

--- a/second/main.tex
+++ b/second/main.tex
@@ -1,6 +1,8 @@
 \chapter{設計指針}
 \label{chap:second}
 %
-\input{second/task}
-\input{second/spec}
+% \input{second/task}
+% \input{second/spec}
+\input{second/arm_search}
+\input{second/newtask}
 %
