作業調査セクションの文言を修正し、従来のオフィスロボットの作業事例をより明確に説明した

--- a/second/task.tex
+++ b/second/task.tex
@@ -1,8 +1,7 @@
 %!TEX root = ../thesis.tex
-本研究で開発するオフィスロボットは，従来のオフィスロボットが取り組んでいる作業を基に，特定の代表的な作業に焦点を当てる．本章では，開発するオフィスロボットが対象とする作業を決定し，その作業に必要なロボットアームのメカニズム要件について述べる．
+本研究で開発するオフィスロボットは，従来のオフィスロボットを参考に，代表的な作業に焦点を当てる．本章では，従来のオフィスロボットが対象としている作業を調査し，その作業を対象にロボットアームのメカニズムの要件について述べる．
 \section{作業調査}
-対象とする作業は，従来のオフィスロボットが行っている作業を参考に決定する．
-オフィスロボットが行っている作業事例を動画や文献から合計77件抽出したところ，約61\%が台車移動とピック\&プレイスを組み合わせた作業であった．例えば，部屋の片づけや荷物の運搬などが代表例である．その他の作業は，ドアの開閉，ボタンの押下，フロアの巡回，などが見られた．
+従来のオフィスロボットが行っている作業事例を動画や文献から合計77例抽出した．そのうちの約61\%が台車移動とピック\&プレイスを組み合わせた作業であった．例えば，部屋の片づけや荷物の運搬などが代表例である．その他の作業は，ドアの開閉，ボタンの押下，フロアの巡回，などが見られた．
 
 以上の結果から，現在オフィスロボットが対象としている作業の多くは，物体を把持して移動させる作業であることがわかる．そこで，本研究では「机の片づけ作業」を対象とする．これを選定した理由は以下の3点である．
 \begin{itemize}
