QDDモータの選定セクションを修正し、選定基準や比較情報を明確化した

--- a/third/QDDmotor.tex
+++ b/third/QDDmotor.tex
@@ -2,11 +2,11 @@
 \section{QDDモータの選定}
 飯塚ら\cite{飯塚浩太2021}の研究では，減速比10:1のQDDモータが使用されている．また，Zhaoら\cite{10106520}の研究においては，減速比9:1のQDDモータが採用されていた．これらの先行研究は，ロボットアームと人の衝突時の衝撃力軽減を実現するためには，この程度の減速比を持つモータを採用することが有効であることを示唆している．
 
-さらに，本研究ではオープンプラットフォームの観点を重視し，他のロボットアームに使用されているモータと同程度，またはそれ以下の価格であることを選定基準とした．調査対象としたオフィスロボットのうち，ロボットアームに使用しているアクチュエータの価格は，約3万円から約8万円であったため，価格上限を8万円に設定した．
+さらに，本研究ではオープンプラットフォームの観点を重視し，他のロボットアームに使用されているモータと同程度，またはそれ以下の価格であることを選定基準とした．
 
-以上を踏まえ，本研究では，持つSteadywinのGIM8108-8とGIM3505-8を採用した．減速比は8:1であり，先行研究で使用されていたモータと同程度の減速比を持つ．また，価格は約19,000円と約18,000円であり，価格上限である8万円を下回っている．
+以上を踏まえ，本研究では，持つSteadywinのGIM8108-8とGIM3505-8を採用した．減速比は8:1であり，先行研究で使用されていたモータと同程度の減速比を持つ．
 \subsection{選定したモータの性能}
-表\ref{tab:QDDComparison}に，選定したQDDモータとReachy\cite{Reachy:online}のアームに使用されているモータ(Dynamixel MX-106T)の比較を示す．選定したSteadywinのGIM8108-8とGIM3505-8は，減速比が8:1で，先行研究で使用していた減速比と近しい物になっている．適切に制御することで衝突時の衝撃を軽減することが可能である．また，許容ラジアル荷重とアキシアル荷重も高いため，追加の補強部品を必要とせずにロボットアームの構造を簡略化することが可能である．
+表\ref{tab:QDDComparison}に，選定したQDDモータとReachy\cite{Reachy:online}のアームに使用されているモータ(Dynamixel MX-106T)の比較を示す．選定したSteadywinのGIM8108-8とGIM3505-8は，減速比が8:1で，飯塚ら\cite{飯塚浩太2021}の研究で使用していた減速器(10:1)や，Zhaoら\cite{10106520}の使用していたQDDモータの減速比(9:1)の減速比と近いものを選んだ．Reachyに使用されているモータと比較すると(\ref{tab:QDDComparison}参照)減速比が非常に小さいことがわかる．そのため，応答性やバックドライバビリティが高く，適切に制御することで衝突時の衝撃を軽減することが可能である．また，許容ラジアル荷重とアキシアル荷重も大きいため，追加の補強部品を必要とせずにロボットアームの構造を簡略化することが可能である．
 \begin{table}[]
   \centering
   \caption{QDD motor performance comparison}
@@ -20,8 +20,7 @@
   重量(g)        & 396                                                           & 97                                                            & 153                                                         \\
   無負荷回転数(rpm)  & 320                                                           & 384                                                           & 55                                                          \\
   許容ラジアル荷重(N)  & 900                                                           & 300                                                           & 40                                                          \\
-  許容アキシアル荷重(N) & 225                                                           & 75                                                            & 20                                                          \\
-  価格(円)        & 約19,000                                                       & 約18,000                                                       & 約80,000                                                     \\ \hline
+  許容アキシアル荷重(N) & 225                                                           & 75                                                            & 20                                                          \\ \hline
   \end{tabular}
 \end{table}
 
