文献リストに新しいオンラインリソースを追加し、既存のエントリの形式を修正した

--- a/main_bibliography.bib
+++ b/main_bibliography.bib
@@ -50,7 +50,7 @@ note = {(Accessed on 1/15/2025)}
   keywords={Mechatronics;Service robots;Dynamics;Propioception;Production;Control systems;Impedance;robot arm;manipulation;proprioceptive actuation;mechatronics},
   doi={10.1109/ICMRE56789.2023.10106520}
 }
-@misc{Meviy:online,
+@misc{meviy:online,
 author = {},
 title = {Meviy(MISUMI)},
 howpublished = {\url{https://meviy.misumi-ec.com/worldwide/}},
@@ -130,6 +130,22 @@ note = {(Accessed on 1/15/2025)}
 author = {},
 title = {Reachy 2023 | Reachy 2023 Documentation},
 howpublished = {\url{https://docs.pollen-robotics.com/}},
+month = {},
+year = {},
+note = {(Accessed on 1/15/2025)}
+}
+@misc{inventor:online,
+author = {},
+title = {AUTODESK | Inventor},
+howpublished = {\url{https://www.autodesk.com/jp/products/inventor/}},
+month = {},
+year = {},
+note = {(Accessed on 1/15/2025)}
+}
+@misc{misumi:online,
+author = {},
+title = {MISUMI},
+howpublished = {\url{https://jp.misumi-ec.com/}},
 month = {},
 year = {},
 note = {(Accessed on 1/15/2025)}
