新しい章を追加し、文書構成を更新した

--- a/thesis.tex
+++ b/thesis.tex
@@ -52,6 +52,7 @@
 \include{second/main}
 \include{third/main}
 \include{construction/main}
+\include{kensyo/main}
 \include{conclusion/main}
 %ここにディレクトリのパスを追加していく
 %
