表の列の形式を修正し、ロボットアームの仕様を明確にした

--- a/construction/assembly.tex
+++ b/construction/assembly.tex
@@ -10,7 +10,7 @@
 \begin{table}[h]
   \centering
   \caption{Specifications of the robot arm}
-  \begin{tabular}{l|l}
+  \begin{tabular}{ll}
   \hline
   Weight    & 2.2 kg                \\
   Length    & 760 mm                \\
